2010-11-20 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el (tinyperl-perldoc-1): Add let* back.

	* tiny/tinypage.el (tinypage-renumber-forward): Add let* back.

	* tiny/tinylpr.el (tinylpr-print-style-completions): Use `dolist'.

	* tiny/tinycygwin.el: Quiet byte compiler CL runtime warnings
	which are bogus.

	* tiny/tinyliby.el
        (top level): Replace all variables from *-:* to *--*.
        Use let* only where needed. Delete obsolete mh-* example from docs.
        (tinyliby-version-time): New.
	(tinyliby-version): Remove.
	(tinyliby-version-id): Remove.
	(tinyliby-version): Remove.
	(tinyliby-submit-feedback): Remove.
	(ti::system-unload-symbols): Rewrite using `dolist'.
	(ti::system-load-cleanup): Use descriptive variable names.
	(ti::system-doc-where-is-source): Optimize `concat' with macro.
	(ti::system-symbol-dolist-macro): Use new macro syntax.
	(ti::system-remove-from-hooks): Rewrite using `dolist'.
	(ti::system-describe-symbols): Use `mapc' in place of `mapcar'.
	(ti::system-unload): Add missing %s to `error'.
	(ti::system-describe-symbols): Update obsolete `print-help-return-message'
	to `help-print-return-message'.
	(ti::system-describe-symbol-summary): Remove `set-buffer'.

	* tiny/tinylibo.el
	(top level): update function layout; beatify. remove debug.
	(tinylibo-version): Remove.
	(tinylibo-version-id): Remove.
	(tinylibo-version): Remove.
	(tinylibo-feedback): Remove.
	(tinylibo-version-time): New.
	(ti::overlay-get-prop-val): Add 2 missing %s to `error'.
	(ti::overlay-re-search): Add 3 missing %s to `error'.

	* tiny/tinymail.el (tinymail-make-local-hook-available-p): Remove
	obsolete function.

	* tiny/tinyadvice.el (find-file-literally): Update `make-local-hook'.

	* tiny/tinylibmail.el (ti::mail-abbrev-get-alist): Change obsolete
	`pre-abbrev-expand-hook' to `abbrev-expand-functionsa'.
	(ti::mail-yank): Change `set-buffer' to `with-current-buffer'.
	(ti::mail-yank): Change `insert-buffer' to `insert-buffer-substring'.